Some examples are included.

--- a/Java_Basics.ipynb
+++ b/Java_Basics.ipynb
@@ -2160,7 +2160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -2183,6 +2183,7 @@
     "        for(j=0;j<10;j++){\n",
     "            System.out.println(Fibonacci(j));\n",
     "        }\n",
+    "        //System.out.println(Fibonacci(4));\n",
     "    }\n",
     "    \n",
     "    public static int Fibonacci(int i){\n",
@@ -2195,7 +2196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -2221,14 +2222,194 @@
     "!javac RecursiveFuncTest.java\n",
     "!java RecursiveFuncTest"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### e.g.3  what's going to happen if a variable is \"static\"  (Java 7 book written by 洪維恩)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting StaticVariable.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file StaticVariable.java\n",
+    "\n",
+    "class CCircle\n",
+    "{\n",
+    "   private static int count=0;\n",
+    "   private static double pi=3.14;\n",
+    "   private double radius;\n",
+    "\n",
+    "   public CCircle()\n",
+    "   {\n",
+    "      this(1.0);\n",
+    "   }\n",
+    "   public CCircle(double r)\n",
+    "   {\n",
+    "      radius=r;\n",
+    "      count ++;\n",
+    "   }\n",
+    "   public void show()\n",
+    "   {\n",
+    "      System.out.println(\"area=\"+pi*radius*radius);\n",
+    "   }\n",
+    "   public void show_count()\n",
+    "   {\n",
+    "      System.out.println(count+\" object(s) created\");\n",
+    "   }\n",
+    "}\n",
+    "public class StaticVariable\n",
+    "{\n",
+    "   public static void main(String args[])\n",
+    "   {\n",
+    "      CCircle cir1=new CCircle();\n",
+    "      cir1.show_count();\n",
+    "      CCircle cir2=new CCircle(2.0);\n",
+    "      CCircle cir3=new CCircle(4.3);\n",
+    "      cir1.show_count();\n",
+    "      cir2.show_count();\n",
+    "      cir3.show_count();\n",
+    "   }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 object(s) created\n",
+      "3 object(s) created\n",
+      "3 object(s) created\n",
+      "3 object(s) created\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac StaticVariable.java\n",
+    "!java StaticVariable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### e.g.4  what's going to happen if a function is \"static\"  (Java 7 book written by 洪維恩)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing StaticFunction.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file StaticFunction.java\n",
+    "class CCircle\n",
+    "{\n",
+    "   private static int count=0;\n",
+    "   private static double pi=3.14;\n",
+    "   private double radius;\n",
+    "\n",
+    "   public CCircle()\n",
+    "   {\n",
+    "      this(1.0);\n",
+    "   }\n",
+    "   public CCircle(double r)\n",
+    "   {\n",
+    "      radius=r;\n",
+    "      count++;\n",
+    "   }\n",
+    "   public void show()\n",
+    "   {\n",
+    "      System.out.println(\"area=\"+pi*radius*radius);\n",
+    "   }\n",
+    "   public static void show_count()\n",
+    "   {\n",
+    "      System.out.println(count+\" object(s) created\");\n",
+    "   }\n",
+    "}\n",
+    "public class StaticFunction\n",
+    "{\n",
+    "   public static void main(String args[])\n",
+    "   {\n",
+    "      CCircle.show_count();\n",
+    "      CCircle cir1=new CCircle();\n",
+    "      CCircle.show_count();\n",
+    "      CCircle cir2=new CCircle(2.0);\n",
+    "      CCircle cir3=new CCircle(4.3);\n",
+    "      cir3.show_count();\n",
+    "   }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 object(s) created\n",
+      "1 object(s) created\n",
+      "3 object(s) created\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac StaticFunction.java\n",
+    "!java StaticFunction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
