Some more examples are added.

--- a/Java_Basics.ipynb
+++ b/Java_Basics.ipynb
@@ -2227,7 +2227,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### e.g.3  what's going to happen if a variable is \"static\"  (Java 7 book written by 洪維恩)"
+    "# Day4; 26.09.2016; Taipeh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### e.g.3  what's going to happen if a \"variable\" is \"static\"  (Java 7 book written by 洪維恩)"
    ]
   },
   {
@@ -2314,7 +2321,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### e.g.4  what's going to happen if a function is \"static\"  (Java 7 book written by 洪維恩)"
+    "i.e. a static variable is stored at a fixed address of the memory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### e.g.4  what's going to happen if a \"function\" is \"static\"  (Java 7 book written by 洪維恩)"
    ]
   },
   {
@@ -2395,13 +2409,458 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "i.e. a static function can be called without instance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### e.g.5 what happens if Object1=Object2?  (Java 7 book written by 洪維恩)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing ObjEqual.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file ObjEqual.java\n",
+    "class CCircle\n",
+    "{\n",
+    "   private static double pi=3.14;\n",
+    "   private double radius;\n",
+    "\n",
+    "   public CCircle(double r)\n",
+    "   {\n",
+    "      radius=r;\n",
+    "   }\n",
+    "   public void setRadius(double r)\n",
+    "   {\n",
+    "      radius=r;\n",
+    "   }\n",
+    "   public void show()\n",
+    "   {\n",
+    "      System.out.println(\"area=\"+pi*radius*radius);\n",
+    "   }\n",
+    "}\n",
+    "public class ObjEqual\n",
+    "{\n",
+    "   public static void main(String args[])\n",
+    "   {\n",
+    "      CCircle cir1,cir2;\n",
+    "      cir1=new CCircle(1.0);\n",
+    "      cir1.show();\n",
+    "\n",
+    "      cir2=cir1;\n",
+    "      cir2.setRadius(2.0);\n",
+    "      cir1.show();\n",
+    "   }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "area=3.14\n",
+      "area=12.56\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac ObjEqual.java\n",
+    "!java ObjEqual"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "if things of obj1 is varied, so does obj2 since they are equivalent."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 22. Let's check if I understand private or public better:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting testPrivate.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file testPrivate.java\n",
+    "private class Circle\n",
+    "{\n",
+    "    public static double pi=3.14;\n",
+    "\n",
+    "}\n",
+    "public class testPrivate\n",
+    "{\n",
+    "    public static void main(String args[])\n",
+    "    {\n",
+    "        System.out.println(Circle.pi);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "testPrivate.java:1: error: modifier private not allowed here\n",
+      "private class Circle\n",
+      "        ^\n",
+      "1 error\n",
+      "錯誤: 找不到或無法載入主要類別 testPrivate\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac testPrivate.java\n",
+    "!java testPrivate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q: how to creat a package?\n",
+    "\n",
+    "Q: whether one can make a class \"private\"?\n",
+    "\n",
+    "In Java, the outest class that contains the main function must be declaired as \"public\". Indeed, if an outest class is private, it cannot communicate with other classes. In this case, OOP is useless... Also, if some outest class (which does not contain the main function) is declared as private, it would be useless because other classes (including the class that covers the main function) will not be able to use it. Hence, I think this is the reason why there's no \"private class\" in Java."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting testPrivate.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file testPrivate.java\n",
+    "class Circle\n",
+    "{\n",
+    "    public static double pi=3.14;\n",
+    "\n",
+    "}\n",
+    "public class testPrivate\n",
+    "{\n",
+    "    public static void main(String args[])\n",
+    "    {   Circle.pi=123;\n",
+    "        System.out.println(Circle.pi);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac testPrivate.java\n",
+    "!java testPrivate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### e.g.6 this is an interesting example using \"this.xxx\" ( it also shows that an object can be inputed to a function)  (Java 7 book written by 洪維恩)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ExampleUsingThis.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file ExampleUsingThis.java\n",
+    "class CCircle\n",
+    "{\n",
+    "   private static double pi=3.14;\n",
+    "   private double radius;\n",
+    "\n",
+    "   public CCircle(double r)      // A constructor may need inputs. However, since it is just an initializer, \n",
+    "   {                             // it does not have to return anything! \n",
+    "      radius=r;                  // Therefore, we don't have to add \"void\" to a constructor!\n",
+    "   }\n",
+    "   public void compare(CCircle cir)\n",
+    "   {\n",
+    "      if(this.radius==cir.radius)\n",
+    "         System.out.println(\"radius are equal\");\n",
+    "      else\n",
+    "         System.out.println(\"radius are not equal\");\n",
+    "   }\n",
+    "}\n",
+    "public class ExampleUsingThis\n",
+    "{\n",
+    "   public static void main(String args[])\n",
+    "   {\n",
+    "      CCircle cir1=new CCircle(1.0);\n",
+    "      CCircle cir2=new CCircle(1.0);\n",
+    "      cir1.compare(cir2);\n",
+    "\n",
+    "      CCircle cir3=new CCircle(1.0);\n",
+    "      CCircle cir4=new CCircle(1.1);\n",
+    "      cir3.compare(cir4);\n",
+    "   }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "radius are equal\n",
+      "radius are not equal\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac ExampleUsingThis.java\n",
+    "!java ExampleUsingThis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### e.g.7 an object can be returned by a function!  (Java 7 book written by 洪維恩)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ReturnObj.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file ReturnObj.java\n",
+    "class CCircle\n",
+    "{\n",
+    "   private static double pi=3.14;\n",
+    "   private double radius;\n",
+    "\n",
+    "   public CCircle(double r)\n",
+    "   {\n",
+    "      radius=r;\n",
+    "   }\n",
+    "   public void compare(CCircle cir)\n",
+    "   {\n",
+    "      if(this.radius==cir.radius)\n",
+    "         System.out.println(\"radius are equal\");\n",
+    "      else\n",
+    "         System.out.println(\"radius are not equal\");\n",
+    "   }\n",
+    "}\n",
+    "public class ReturnObj\n",
+    "{\n",
+    "   public static void main(String args[])\n",
+    "   {\n",
+    "      CCircle cir1=new CCircle(1.0);\n",
+    "      CCircle cir2=new CCircle(2.0);\n",
+    "      cir1.compare(cir2);\n",
+    "   }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "radius are not equal\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac ReturnObj.java\n",
+    "!java ReturnObj"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### e.g.8 the use of nested classes.  (Java 7 book written by 洪維恩)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting NestedClass.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file NestedClass.java\n",
+    "public class NestedClass\n",
+    "{\n",
+    "   public static void main(String args[])\n",
+    "   {\n",
+    "      //Caaa aa= new Caaa();\n",
+    "      //aa.set_num(5);\n",
+    "      Caaa.set_num(5);\n",
+    "   }\n",
+    "\n",
+    "   class Caaa\n",
+    "   {\n",
+    "      static int num;\n",
+    "      static void set_num(int n)\n",
+    "      {\n",
+    "         num=n;\n",
+    "         System.out.println(\"num= \"+ num);\n",
+    "      }\n",
+    "   }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "NestedClass.java:12: error: Illegal static declaration in inner class NestedClass.Caaa\n",
+      "      static int num;\n",
+      "                 ^\n",
+      "  modifier 'static' is only allowed in constant variable declarations\n",
+      "NestedClass.java:13: error: Illegal static declaration in inner class NestedClass.Caaa\n",
+      "      static void set_num(int n)\n",
+      "                  ^\n",
+      "  modifier 'static' is only allowed in constant variable declarations\n",
+      "2 errors\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num= 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac NestedClass.java\n",
+    "!java NestedClass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Well, let's come back later. I'll learn the structures of the nested classes better."
+   ]
   }
  ],
  "metadata": {
