Some exercises are added.

--- a/Java_Basics.ipynb
+++ b/Java_Basics.ipynb
@@ -3974,12 +3974,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### the following are some tests to learn how to use arrays. Not done yet."
+    "### 26. Lab: Sorting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's do it (a simple sort) first in Python"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 364,
    "metadata": {
     "collapsed": false
    },
@@ -3988,30 +3995,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ArrTest.java\n"
+      "[23, 12, 7, 5, 2]\n"
      ]
     }
    ],
    "source": [
-    "%%file ArrTest.java\n",
+    "arr=[5,12,7,23,2]\n",
     "\n",
-    "public class ArrTest\n",
-    "{\n",
-    "    public static void main(String CmdLineArgs[]){\n",
-    "        int i;\n",
-    "        int a[]=new int[5];\n",
-    "        for(i=0;i<a.length;i++){\n",
-    "            a[i]=i;\n",
-    "            System.out.println(a[i]);\n",
-    "        }\n",
-    "        //System.out.println(a[:]);\n",
-    "    }\n",
-    "}"
+    "for i in range(len(arr)):\n",
+    "    tmp=arr[i]\n",
+    "    for j in range(i+1,len(arr)):\n",
+    "        if arr[j]>tmp:             # look for the biggest number\n",
+    "            tmp=arr[j]\n",
+    "            index=j\n",
+    "            arr[index]=arr[i]      # swap\n",
+    "            arr[i]=tmp\n",
+    "print arr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's do it in the stupid Java:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false
    },
@@ -4020,81 +4031,243 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n"
-     ]
-    }
-   ],
-   "source": [
-    "!javac ArrTest.java\n",
-    "!java ArrTest"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "%%file ArrTest.java\n",
-    "\n",
-    "public class ArrTwoDimTest\n",
-    "{\n",
-    "    public static void main(String CmdLineArgs[]){\n",
-    "        int i;\n",
-    "        int a[][]=new int[5][6];\n",
-    "        for(i=0;i<a.length;i++){\n",
-    "            a[i]=i;\n",
-    "            System.out.println(a[i]);\n",
-    "        }\n",
-    "        //System.out.println(a[:]);\n",
-    "    }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 216,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing SortTest.java\n"
+      "Overwriting SortTest.java\n"
      ]
     }
    ],
    "source": [
     "%%file SortTest.java\n",
+    "import java.util.Arrays;\n",
     "\n",
     "public class SortTest\n",
     "{\n",
     "    public static void main(String CmdLineArgs[]){\n",
-    "        int i;\n",
-    "        int dat[]={1,2,3,4,5,6,7,8,9,10};\n",
+    "        int i,j,tmp,index=1;\n",
+    "        int arr[]={5,12,7,23,2};\n",
+    "        for(i=0;i<arr.length;i++){\n",
+    "            tmp=arr[i];\n",
+    "            for(j=i+1;j<arr.length;j++){\n",
+    "                if(arr[j]>tmp){                          //find the biggest number\n",
+    "                    tmp=arr[j];\n",
+    "                    index=j;\n",
+    "                    arr[index]=arr[i];                   //swap\n",
+    "                    arr[i]=tmp;\n",
+    "                }\n",
     "\n",
+    "            }\n",
     "        }\n",
-    "        //System.out.println(a[:]);\n",
+    "        System.out.println(Arrays.toString(arr));\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[23, 12, 7, 5, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac SortTest.java\n",
+    "!java SortTest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 394,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting SortHwk.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file SortHwk.java\n",
+    "import java.util.Arrays;\n",
+    "\n",
+    "public class SortHwk\n",
+    "{\n",
+    "    public static int[][] sort(int mat[][]){\n",
+    "        /** \n",
+    "        /* This function sorts the elements of an array. \n",
+    "        /* After sorting, the elements will be arranged in descending order. \n",
+    "        /* The input array is stored at mat[1][:]. Its attached label is stored at mat[0][:].\n",
+    "        /*\n",
+    "        /* Return:\n",
+    "        /*     the sorted array and its corresponding label\n",
+    "        /* Locally, the sorted array is stored at newmat[1][:]. Its attached label is stored at newmat[0][:].\n",
+    "        */\n",
+    "        int i,j,tmp,tmpLabel,index=1;\n",
+    "        int newmat[][]=new int[mat.length][mat[0].length];\n",
+    " \n",
+    "        for(i=0;i<mat.length;i++){                    //copy the input matrix\n",
+    "            for(j=0;j<mat[0].length;j++){\n",
+    "            newmat[i][j]=mat[i][j];\n",
+    "            }\n",
+    "        }\n",
+    "        for(i=0;i<newmat[0].length;i++){\n",
+    "            tmp=newmat[1][i];\n",
+    "            tmpLabel=newmat[0][i];\n",
+    "            for(j=i+1;j<newmat[0].length;j++){\n",
+    "                if(newmat[1][j]>tmp){                 //find the biggest number\n",
+    "                    tmp=newmat[1][j];\n",
+    "                    tmpLabel=newmat[0][j];\n",
+    "                    index=j;\n",
+    "                    newmat[1][index]=newmat[1][i];    //swap\n",
+    "                    newmat[1][i]=tmp;\n",
+    "                    newmat[0][index]=newmat[0][i];    //swap the Label of arr, too\n",
+    "                    newmat[0][i]=tmpLabel;\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "        return newmat;\n",
+    "    }\n",
+    "    \n",
+    "    public static int[] RanArrayGen(int randarr[], int MaxNum){\n",
+    "        /** \n",
+    "        /* This function creats an array which contains uniformly distributed random numbers(integer). \n",
+    "        /* The integers are within the range [1,MaxNum]. \n",
+    "        /*\n",
+    "        /* Return:\n",
+    "        /*     the array of random numbers(integer)\n",
+    "        */\n",
+    "        int i;        \n",
+    "        for(i=0;i<randarr.length;i++){                //create an array which contains random numbers ranging from 1 to 42\n",
+    "            randarr[i]=(int)(Math.random()*MaxNum+1);\n",
+    "        }\n",
+    "        return randarr;\n",
+    "    }\n",
+    "\n",
+    "    public static int[][] RanArraystats(int randarr[],int MaxNum){\n",
+    "        /** \n",
+    "        /* This function will see how the random numers in \"randarr\" are distributed.\n",
+    "        /* \n",
+    "        /*\n",
+    "        /* Return:\n",
+    "        /*     Matrix (size: MaxNum X MaxNum)\n",
+    "        */\n",
+    "        int i,j;\n",
+    "        int mat[][]=new int[MaxNum][MaxNum];\n",
+    "        for(i=0;i<MaxNum;i++){                  //see how the numbers in the array \"randarr\" are distributed.\n",
+    "            mat[0][i]=i+1;\n",
+    "            mat[1][i]=0;\n",
+    "            for(j=0;j<randarr.length;j++){\n",
+    "                if(randarr[j]==i+1){mat[1][i]++;}\n",
+    "            }\n",
+    "        }\n",
+    "        //System.out.println(Arrays.toString(mat[0]));\n",
+    "        //System.out.println(Arrays.toString(mat[1]));\n",
+    "        return mat; \n",
+    "    }\n",
+    "\n",
+    "    public static void PrintResults(int mat[][], int newmat[][]){\n",
+    "        /** \n",
+    "        /* This function prints the final result.\n",
+    "        /* \n",
+    "        /* Return:\n",
+    "        /*     Nothing\n",
+    "        */\n",
+    "        int i,j;\n",
+    "\n",
+    "        System.out.printf(\"original|    data | sorted|   data \\n\");    // output results\n",
+    "        System.out.printf(\"---------------------------------- \\n\");    // output results\n",
+    "        for(i=0;i<mat[0].length;i++){\n",
+    "            System.out.printf(\"%7d | %7d | %5d | %6d \\n\",mat[0][i],mat[1][i],newmat[0][i],newmat[1][i]);\n",
+    "        }\n",
+    "        \n",
+    "    }\n",
+    "    \n",
+    "    public static void main(String CmdLineArgs[]){\n",
+    "        int i,j;\n",
+    "        int randarr[]=new int[100000];\n",
+    "        int mat[][]=new int[2][42];\n",
+    "        int newmat[][]=new int[2][42];\n",
+    "        \n",
+    "        RanArrayGen(randarr,mat[0].length);           // create the array that stores random number\n",
+    "        mat=RanArraystats(randarr,mat[0].length);     // learn how many times that a label has shown in the created array\n",
+    "        newmat=sort(mat);                             // sort the (label, number of times) matrix\n",
+    "        PrintResults(mat,newmat);                     // output the final result\n",
     "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 395,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original|    data | sorted|   data \n",
+      "---------------------------------- \n",
+      "      1 |    2357 |    31 |   2480 \n",
+      "      2 |    2384 |    12 |   2460 \n",
+      "      3 |    2447 |    17 |   2456 \n",
+      "      4 |    2406 |    19 |   2454 \n",
+      "      5 |    2419 |     3 |   2447 \n",
+      "      6 |    2415 |    30 |   2429 \n",
+      "      7 |    2345 |    11 |   2428 \n",
+      "      8 |    2345 |    24 |   2421 \n",
+      "      9 |    2381 |     5 |   2419 \n",
+      "     10 |    2337 |     6 |   2415 \n",
+      "     11 |    2428 |    26 |   2410 \n",
+      "     12 |    2460 |    42 |   2409 \n",
+      "     13 |    2354 |    39 |   2408 \n",
+      "     14 |    2352 |     4 |   2406 \n",
+      "     15 |    2362 |    27 |   2401 \n",
+      "     16 |    2375 |    34 |   2401 \n",
+      "     17 |    2456 |    41 |   2391 \n",
+      "     18 |    2375 |    40 |   2391 \n",
+      "     19 |    2454 |    23 |   2390 \n",
+      "     20 |    2294 |     2 |   2384 \n",
+      "     21 |    2364 |     9 |   2381 \n",
+      "     22 |    2367 |    16 |   2375 \n",
+      "     23 |    2390 |    18 |   2375 \n",
+      "     24 |    2421 |    37 |   2373 \n",
+      "     25 |    2311 |    22 |   2367 \n",
+      "     26 |    2410 |    21 |   2364 \n",
+      "     27 |    2401 |    15 |   2362 \n",
+      "     28 |    2352 |    29 |   2359 \n",
+      "     29 |    2359 |     1 |   2357 \n",
+      "     30 |    2429 |    13 |   2354 \n",
+      "     31 |    2480 |    28 |   2352 \n",
+      "     32 |    2317 |    14 |   2352 \n",
+      "     33 |    2341 |     7 |   2345 \n",
+      "     34 |    2401 |     8 |   2345 \n",
+      "     35 |    2330 |    33 |   2341 \n",
+      "     36 |    2325 |    10 |   2337 \n",
+      "     37 |    2373 |    35 |   2330 \n",
+      "     38 |    2284 |    36 |   2325 \n",
+      "     39 |    2408 |    32 |   2317 \n",
+      "     40 |    2391 |    25 |   2311 \n",
+      "     41 |    2391 |    20 |   2294 \n",
+      "     42 |    2409 |    38 |   2284 \n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac SortHwk.java\n",
+    "!java SortHwk"
+   ]
   }
  ],
  "metadata": {
