some code examples learned in the class are added.

--- a/Java_Basics.ipynb
+++ b/Java_Basics.ipynb
@@ -4428,7 +4428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -4619,7 +4619,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day7&8 ; 2&3.10.2016; Taipeh; at home"
+    "# Day7&8 ; 1&2.10.2016; Taipeh; at home"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 27. Lab: the MergeSort algorithm"
    ]
   },
   {
@@ -4824,7 +4831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -4833,7 +4840,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting MergeSortTest.java\n"
+      "Writing MergeSortTest.java\n"
      ]
     }
    ],
@@ -4936,7 +4943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -4945,9 +4952,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 2, 3, 4, 5, 6, 7]\r\n",
-      "[1, 1, 2, 2, 3, 4, 6, 7]\r\n",
-      "[1, 1, 1, 1, 2, 2, 2, 2, 3, 3, 4, 4, 6, 6, 7, 7]\r\n"
+      "[1, 2, 2, 3, 4, 5, 6, 7]\n",
+      "[1, 1, 2, 2, 3, 4, 6, 7]\n",
+      "[1, 1, 1, 1, 2, 2, 2, 2, 3, 3, 4, 4, 6, 6, 7, 7]\n"
      ]
     }
    ],
@@ -4961,6 +4968,13 @@
    "metadata": {},
    "source": [
     "Next time, I can learn how to parallelize the above code. The code above is in principle parallelizable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -5069,6 +5083,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 28. exercise: a little modification of the previous example (non-static nested classes)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 97,
    "metadata": {
@@ -5145,6 +5166,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 29. exercise: a little modification of the previous example (static nested classes)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 113,
    "metadata": {
@@ -5208,8 +5236,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 30. exercise: a little modification of the previous example (static nested classes)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -5218,7 +5253,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting app9_16_modified.java\n"
+      "Writing app9_16_modified.java\n"
      ]
     }
    ],
@@ -5246,7 +5281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -5255,7 +5290,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num= 5\r\n"
+      "num= 5\n"
      ]
     }
    ],
@@ -5279,14 +5314,237 @@
     "\n",
     "also, a static method is a method that doesn't require an instance of its enclosing class."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day9 ; 3.10.2016; Taipeh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting TestArgs.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file TestArgs.java\n",
+    "public class TestArgs{\n",
+    "    public static void main(String args[]){\n",
+    "        for(int i=0;i<args.length;i++){\n",
+    "            System.out.println(args[i]);\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "hi\n",
+      "this is one str\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac TestArgs.java\n",
+    "!java TestArgs hello hi \"this is one str\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting EnhancedLoopTest.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file EnhancedLoopTest.java\n",
+    "public class EnhancedLoopTest{\n",
+    "    public static void main(String args[]){\n",
+    "        \n",
+    "        int a[][]={{1,2,3},{4,5,6,7,8,9}};\n",
+    "        \n",
+    "        for(int[] row:a){\n",
+    "            for(int value:row){\n",
+    "                System.out.println(value);\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac EnhancedLoopTest.java\n",
+    "!java EnhancedLoopTest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting VarArgs.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file VarArgs.java\n",
+    "\n",
+    "public class VarArgs{\n",
+    "    static void sum(int...a){\n",
+    "        int Summ=0;\n",
+    "        //for(int i:a){\n",
+    "        for(int i=0;i<a.length;i++){\n",
+    "            Summ=Summ+i;\n",
+    "        }\n",
+    "        System.out.println(Summ);\n",
+    "    }\n",
+    "    public static void main(String args[]){\n",
+    "        sum(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);          \n",
+    "    \n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac VarArgs.java\n",
+    "!java VarArgs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing TestStringEx1.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file TestStringEx1.java\n",
+    "\n",
+    "public class TestStringEx1 {\n",
+    "\n",
+    "    public static void main(String[] args) {\n",
+    "        String data = \"abcdefghabcdefgh\";\n",
+    "        System.out.println(\"data.charAt(3)=\" + data.charAt(3));\n",
+    "        System.out.println(\"data.substring(3, 5)=\" + data.substring(3, 5));\n",
+    "        System.out.println(\"data.indexOf('cd')=\" + data.indexOf(\"cd\"));\n",
+    "        System.out.println(\"data.lastIndexOf('cd')=\" + data.lastIndexOf(\"cd\"));\n",
+    "        System.out.println(\"data.length()=\" + data.length());\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data.charAt(3)=d\n",
+      "data.substring(3, 5)=de\n",
+      "data.indexOf('cd')=2\n",
+      "data.lastIndexOf('cd')=10\n",
+      "data.length()=16\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac TestStringEx1.java\n",
+    "!java TestStringEx1"
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
